Update sections 1 and 5
- Lecture 1: added slide on PTMs
- Lecture 6: updated PCA explanation in slides, removed MNIST and t-SNE from slides and Jupyter with also general text cleanup
- added raw and clean trypsin PDB file in data.
- updated slides dates

--- a/5_Analysis_DR_clustering/1_DR_part1.ipynb
+++ b/5_Analysis_DR_clustering/1_DR_part1.ipynb
@@ -27,13 +27,10 @@
     "\n",
     "**Objectives:**\n",
     "- Remember that most data is inherently multidimensional\n",
-    "- Understand that reducing the number of dimensions can simplify modelling and allow classifications to be performed.\n",
-    "- Use PCA as a popular technique for dimensionality reduction.\n",
-    "- Use tICA another popular dimensionality reduction technique that takes time correlations into account\n",
-    "- t-SNE is another technique for dimensionality reduction.\n",
-    "- Apply PCA and t-SNE with Scikit Learn to an example dataset.\n",
-    "- Compare how PCA and tICA perform on a 2-D toy example\n",
-    "- Evaluate the relative performance of PCA and t-SNE."
+    "- Understand that reducing the number of dimensions can simplify modelling and allow classifications to be performed\n",
+    "- Use PCA as a popular technique for dimensionality reduction\n",
+    "- Use tICA, another popular dimensionality reduction technique that takes time correlations into account\n",
+    "- Compare how PCA and tICA perform on a 2-D toy example."
    ]
   },
   {
@@ -191,15 +188,14 @@
     "    for j in range(0, 4):\n",
     "        value += AA[j] * np.exp(aa[j] * (x - XX[j])**2 + \\\n",
     "            bb[j] * (x - XX[j]) * (y - YY[j]) + cc[j] * (y - YY[j])**2)\n",
-    "    return value\n",
-    "\n"
+    "    return value\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We will now evaluate the potential on a 2-D grid, and plot visualize it."
+    "We will now evaluate the potential on a 2-D grid, and visualize it."
    ]
   },
   {
@@ -241,8 +237,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It's time to generate some data! We will extract 10000 samples according to the probability distribution we have just created. To this end, we will use np.random.choice, which enables us to generate random samples according to a given probability. Since this method works only in 1-D, we will first flatten the array, generate the samples, and them bring them back to 2-D.\n",
-    "\n"
+    "It's time to generate some data! We will extract 10000 samples according to the probability distribution we have just created. To this end, we will use <code>np.random.choice</code>, which enables us to generate random samples according to a given probability. Since this method works only in 1-D, we will first flatten the array, then generate the samples, and finally bring them back to 2-D."
    ]
   },
   {
@@ -383,219 +378,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3. The MNIST Dataset\n",
-    "\n",
-    "The MNIST dataset consists of a 60,000 examples of hand written numbers and 10,000 test set examples. The digits have all been resized to the same size and centered within this fixed image size. One way of accessing the data is from [here](http://yann.lecun.com/exdb/mnist/) or we can use built in function with scikit-learn. In this way you will access a reduced part of the dataset."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "from sklearn import decomposition\n",
-    "from sklearn import datasets\n",
-    "from sklearn import manifold\n",
-    "\n",
-    "digits = datasets.load_digits()\n",
-    "\n",
-    "# Examine the dataset\n",
-    "print(digits.data)\n",
-    "print(digits.target)\n",
-    "\n",
-    "X = digits.data\n",
-    "y = digits.target"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "A short helper function to plot an example from the dataset:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "\n",
-    "def plot_digits(X):\n",
-    "    \"\"\"Small helper function to plot 100 digits.\"\"\"\n",
-    "    fig, axs = plt.subplots(nrows=10, ncols=10, figsize=(8, 8))\n",
-    "    for img, ax in zip(X, axs.ravel()):\n",
-    "        ax.imshow(img.reshape((8, 8)), cmap=\"Greys\")\n",
-    "        ax.axis(\"off\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plot_digits(X)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert alert-success\">\n",
-    "<b>Task 3:</b> Understanding the dataset\n",
-    "\n",
-    "- What are the dimensions of the data?\n",
-    "- What are the features of the data?\n",
-    "- What information do the features hold?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "### Your solution here:\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<details>\n",
-    "<summary> <mark> Solution: </mark> </summary>\n",
-    "\n",
-    "```Python\n",
-    "    \n",
-    "# data dimension\n",
-    "np.shape(X)\n",
-    "# The output of the array tells you, that you have 1797 samples of a 64 dimensional feature vector\n",
-    "  \n",
-    "# Features\n",
-    "print(X[0])\n",
-    "# Each entry in the first sample of the feature vector gives you a value of the grey scale from the image. This could be normalised.\n",
-    "```\n",
-    "\n",
-    "\n",
-    "</details>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert alert-success\">\n",
-    "<b>Task 4:</b> Can you do a principal component analysis of the digits dataset?\n",
-    "\n",
-    "- Do a PCA analysis using two components.    \n",
-    "     - What is the variance contribution of the first two components?    \n",
-    "     - How many components do you need to reach 90% variance explained?    \n",
-    "- Generate a plot of the first two principal components and colour them according to your digit. What does it tell you? </div>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "### Your solution here:\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<details>\n",
-    "<summary> <mark> Solution: </mark> </summary>\n",
-    "\n",
-    "```Python\n",
-    "    \n",
-    "# PCA\n",
-    "pca = decomposition.PCA(n_components=2, n_oversamples=20)\n",
-    "pca.fit(X)\n",
-    "X_pca = pca.transform(X)\n",
-    "\n",
-    "# variance contribution of first two components \n",
-    "print(pca.explained_variance_ratio_)\n",
-    "\n",
-    "# finding 90% variance\n",
-    "for i in range(2,30):\n",
-    "    pca = decomposition.PCA(n_components=i, n_oversamples=20)\n",
-    "    pca.fit(X)\n",
-    "    X_pca = pca.transform(X)\n",
-    "    cum_sum = pca.explained_variance_ratio_.cumsum()\n",
-    "    if cum_sum[-1] > 0.9:\n",
-    "        print(f'{i} number of principle components are needed to reach a variance explained of 90%')\n",
-    "        break\n",
-    "\n",
-    "# plotting first two components and colouring according to digits\n",
-    "plt.scatter(X_pca[:, 0], X_pca[:, 1], c=y, cmap=plt.cm.nipy_spectral, \n",
-    "        edgecolor='k',label=y)\n",
-    "plt.colorbar(boundaries=np.arange(11)-0.5).set_ticks(np.arange(10))\n",
-    "plt.xlabel('pc 1')\n",
-    "plt.ylabel('pc 2') \n",
-    "```\n",
-    "\n",
-    "\n",
-    "</details>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert alert-success\">\n",
-    "<b>Task 5: </b> Rerun your PCA with 5 components </div>\n",
-    "\n",
-    "What feature in your 64 (8x8) digit input vector contributes the most to your first principle components? \n",
-    "Hint: look at the absolute value of `pca.components_[0]` If you you generate a bar plot you can see the contributions well."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "### Your solution here:\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<details>\n",
-    "<summary> <mark> Solution: </mark> </summary>\n",
-    "\n",
-    "```Python\n",
-    "pca = decomposition.PCA(n_components=5, n_oversamples=20)\n",
-    "pca.fit(X)\n",
-    "X_pca = pca.transform(X)\n",
-    "fig, ax = plt.subplots(figsize=(15,15))\n",
-    "indeces = np.argsort(abs(pca.components_[0]))\n",
-    "x = np.linspace(0,len(indeces), len(indeces))\n",
-    "ax.bar( x,abs(pca.components_[0])[indeces],tick_label=indeces)\n",
-    "ax.set_xlabel('feature index')\n",
-    "ax.set_ylabel('absolute value of contribution')\n",
-    "```\n",
-    "\n",
-    "\n",
-    "</details>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## 4. time-lagged independent component analysis (tICA)"
    ]
   },
@@ -603,7 +385,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this section, we will study tCA with a toy dataset. Let's start by loading it."
+    "In this section, we will study tICA with a toy dataset. Let's start by loading it."
    ]
   },
   {
@@ -612,7 +394,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# loading data\n",
     "file = f'..{os.sep}data{os.sep}hmm-doublewell-2d-100k.npz'\n",
     "with np.load(file) as fh:\n",
     "    data = fh['trajectory']"
@@ -632,7 +413,7 @@
    "metadata": {},
    "source": [
     "### 4.1. Visualising the dataset\n",
-    "We can see this is a trajectory with 100000 time datapoints and 2 features. Let's examine this dataset a bit more. "
+    "We can see this is a trajectory with 100000 time datapoints and 2 features. Let's examine this dataset a bit more, plotting the time evolution of each feature in a separate plot. "
    ]
   },
   {
@@ -642,8 +423,8 @@
    "outputs": [],
    "source": [
     "fig, axes = plt.subplots(1, 2, figsize=(10, 4))\n",
-    "axes[0].plot(data[:300,0], alpha=0.6)\n",
-    "axes[1].plot(data[:300,1], alpha=0.6)\n",
+    "axes[0].plot(data[:300, 0], alpha=0.6)\n",
+    "axes[1].plot(data[:300, 1], alpha=0.6)\n",
     "axes[1].set_xlabel('$time$')\n",
     "axes[0].set_xlabel('$time$')\n",
     "axes[0].set_ylabel('$x$')\n",
@@ -656,7 +437,7 @@
    "metadata": {},
    "source": [
     "<div class=\"alert alert-success\">\n",
-    "<b>Task 6: </b> Examine the data a bit more, to get a better feel for it. What is the extent of the data set in x and y? Can you plot a histogram of the data? What information does the trajectory tell us the histogram obscures? </div>\n",
+    "<b>Task 6: </b> Examine the data to get a better feel for it. What is the extent of the data set in x and y? Can you plot a histogram of the data? What information does the trajectory tell us the histogram obscures? </div>\n",
     "\n"
    ]
   },
@@ -698,7 +479,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "tICA is a common dimensionality reduction technique for molecular dynamics trajectories. Unfortunately scikit-learn does not feature an implementation of this method, which is why other packages are normally used. Here, we provide a convenient helper module based on the implementation from [MSM-Builder](http://msmbuilder.org/3.8.0/), adapted so that it can be used as stand-alone code. The module is written so as to mimic the dimensionality reduction is done with scikit-learn. That means you use a similar syntax as before, i.e you create an instance of tICA with a given number of components and then you use fit and transform on the data. "
+    "tICA is a common dimensionality reduction technique for molecular dynamics trajectories. Unfortunately scikit-learn does not feature an implementation of this method, which is why other packages are normally used. Here, we provide a convenient helper module, called <code>tICA</code>, based on the implementation from [MSM-Builder](http://msmbuilder.org/3.8.0/). The module has been adapted so that it can be used as stand-alone, and is written to mimic the syntax of dimensionality reduction techniques available in scikit-learn."
    ]
   },
   {
@@ -857,9 +638,9 @@
     "tic_out = tic.transform([data])[0]\n",
     "PCA_out = pca.transform(data)\n",
     "```\n",
-    "    \n",
-    "Now, let's make some pretty plots showing the projections on the first and second component of PCA and tICA\n",
-    "    \n",
+    "<br>\n",
+    "Now, let's make some pretty plots showing the projections on the first and second component of PCA and tICA.\n",
+    "\n",
     "```Python\n",
     "fig = plt.figure(figsize=(10, 4))\n",
     "    \n",
@@ -884,73 +665,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 5. t-Distributed Stochastic Neighbor Embedding (t-SNE) "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "t-SNE is a technique for dimensionality reduction that is particularly well suited for the visualization of high-dimensional datasets. It gives each datapoint a poisition in a two or three dimensional map. It is classed as a non-linear dimensionality reduction technique and models high-dimensional data that are close in space to spatially close two or three-deminsional points. Let's apply t-SNE to the MNIST dataset we have met in section 3!"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tsne = manifold.TSNE(n_components=2, init='pca', random_state = 0)\n",
-    "X_tsne = tsne.fit_transform(X)\n",
-    "fig = plt.figure(1, figsize=(4, 4))\n",
-    "plt.clf()\n",
-    "plt.scatter(X_tsne[:, 0], X_tsne[:, 1], c=y, cmap=plt.cm.nipy_spectral,\n",
-    "        edgecolor='k',label=y)\n",
-    "plt.colorbar(boundaries=np.arange(11)-0.5).set_ticks(np.arange(10))\n",
-    "plt.xlabel('t-SNE 0')\n",
-    "plt.ylabel('t-SNE 1')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert alert-success\">\n",
-    "<b>Task 6:</b> Can you regenerate your t-SNE embedding in 3D and plot it? </div>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "### Your solution here\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<details>\n",
-    "<summary> <mark> Solution:</mark> </summary>\n",
-    "\n",
-    "```Python\n",
-    "tsne = manifold.TSNE(n_components=3, init='pca', random_state = 0)\n",
-    "X_tsne = tsne.fit_transform(X)\n",
-    "fig = plt.figure(1, figsize=(4, 4))\n",
-    "plt.clf()\n",
-    "ax = fig.add_subplot(projection='3d')\n",
-    "ax.scatter(X_tsne[:, 0], X_tsne[:, 1], X_tsne[:, 2], c=y, cmap=plt.cm.nipy_spectral, s=9, lw=0)\n",
-    "\n",
-    "```\n",
-    "</details>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## 6. Conclusion"
    ]
   },
@@ -965,7 +679,6 @@
     "- PCA can be used to remove noise from data,\n",
     "- tICA is also a linear dimensionality reduction technique, but it maximises the autocorrelation time rather than the variance    \n",
     "- tICA and PCA may be appropriate for different use cases: tICA will generally provide you with slow dynamics and PCA for maximising spacial variance. \n",
-    "- t-SNE is another dimensionality reduction technique for tabular data that is more general than PCA.\n",
     "</div>"
    ]
   },
@@ -1009,7 +722,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.6"
   },
   "toc": {
    "base_numbering": 1,
@@ -1026,5 +739,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
