--- a/5_Analysis_DR_clustering/2_DR_part2.ipynb
+++ b/5_Analysis_DR_clustering/2_DR_part2.ipynb
@@ -16,7 +16,7 @@
    "metadata": {},
    "source": [
     "**Learning Objectives**:\n",
-    "* Calculating and interpreting the PCA of one or multiple molecular dynamics trajectory\n",
+    "* Calculating and interpreting the PCA of one or multiple molecular dynamics trajectories\n",
     "* Calculating TICA of a molecular dynamics trajectory"
    ]
   },
@@ -323,7 +323,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The features have now been projected in their eigenspace. The first dimension in the eigenspace is the one displaying the largest variance in data (i.e. describes the largest correlated motion in our simulation), the second dimension is ortogonal to the first and describes the second largest correlated motion, and so on. Let's have a look at how much motion is captured by each of the first 20 dimensions."
+    "The features have now been projected in their eigenspace. The first dimension in the eigenspace is the one displaying the largest variance in data (i.e., describes the largest correlated motion in our simulation), the second dimension is ortogonal to the first and describes the second largest correlated motion, and so on. Let's have a look at how much motion is captured by each of the first 20 dimensions."
    ]
   },
   {
@@ -350,7 +350,7 @@
     "<div class=\"alert alert-info\">\n",
     "<b>Compressing an MD simulation</b>\n",
     "\n",
-    "Often the first few dimensions in the eigenspace of atomic coordinates can, together, capture majority of the variance in an MD simulation. How come the thousands of features describing a protein can be compressed in so few dimensions? This is because the many atoms composing a protein tend to move together, i.e. the data features very high correlation.\n",
+    "Often the first few dimensions in the eigenspace of atomic coordinates can, together, capture majority of the variance in an MD simulation. How come the thousands of features describing a protein can be compressed in so few dimensions? This is because the many atoms composing a protein tend to move together, i.e., the data features very high correlation.\n",
     "</div>"
    ]
   },
@@ -358,7 +358,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's plot a projection of the data in 2D space (the two first principal components), also reporting the percentage of variance represented by each component."
+    "Let's plot a projection of the data in 2D space (the two first principal components, PCs), also reporting the percentage of variance represented by each component."
    ]
   },
   {
@@ -385,7 +385,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The issue we are having, is that each dataset has been projected in its own eigenspace. In other terms, the two plots we have just produced just report on the structure of their dataset, but are not directly comparable. Do compare two simulations, we need to project them in the ***same*** eigenspace. This requires concatenating the trajectories (of course, this can only be done if the same features have been extracted from them)."
+    "The issue we are having, is that each dataset has been projected in its own eigenspace. In other terms, the two plots we have just produced just report on the structure of their dataset, but are not directly comparable. To compare two simulations, we need to project them in the ***same*** eigenspace. This requires concatenating the trajectories. This can only be done if the same features have been extracted from each them."
    ]
   },
   {
@@ -459,7 +459,7 @@
     "<div class=\"alert alert-warning\">\n",
     "<b>Watch out for rototranslations!</b>\n",
     "\n",
-    "If the features you are extracting are affected by the specific position and orientation of the molecule in the simulation box (e.g., you are extracting atomic coordinates), it is commonplace to first align your trajectory. The PCA will otherwise identify rototranslation as more important variations than any internal motion you may be interested in. Some features are unaffected by rototranslation of the dataset (e.g. dihedral angles), in this case trajectory alignment is not necessary.\n",
+    "If the features you are extracting are affected by the specific position and orientation of the molecule in the simulation box (e.g., you are extracting atomic coordinates), it is commonplace to first align your trajectory. The PCA will otherwise identify rototranslations of the whole protein as more important variations than any internal motion you may be interested in. Some features are unaffected by rototranslation of the dataset (e.g., dihedral angles). In this case trajectory alignment is not necessary.\n",
     "</div>"
    ]
   },
@@ -500,7 +500,7 @@
     "\n",
     "    return np.array(crds)\n",
     "```\n",
-    "    \n",
+    "<br>    \n",
     "As new feature, how about mesuring the angles formed by different domains? Or their relative orientation in spherical coordinates? Or selecting the distances between specific amino acid pairs, instead of using the whole distance matrix?\n",
     "</details>\n"
    ]
@@ -516,7 +516,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We will use the same simulation datasets as before, but this time we will perform a tICA analysis. Like for the PCA, we will start by analysing the simulations separately."
+    "We will use the same simulation datasets as before, but this time we will perform a tICA analysis. Like for PCA, we will start by analysing the simulations separately."
    ]
   },
   {
@@ -567,7 +567,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As we noticed when discussing PCA, two simulations can only be compared if they are projected in the same space. Let's do the same for tICA!"
+    "As we pointed out when discussing PCA, two simulations can only be compared if they are projected in the same space. Let's do the same for tICA!"
    ]
   },
   {
@@ -629,7 +629,7 @@
     "    \n",
     "- PCA identifies dominant motions in MD simulations by looking at directions of maximal variance in data\n",
     "- tICA identifies dimensions whereby the decay time of the autocorrelation function of each dimension is maximised\n",
-    "- some features are position-dependent (e.g. atom coordinates), and some are not (e.g. dihedral angles)\n",
+    "- some features are position-dependent (e.g. atom coordinates), and some are not (e.g., dihedral angles)\n",
     "- if handling position-dependent features:\n",
     "    - trajectory alignment will affect what kind of motion will be identified by any dimensionality reduction technique\n",
     "    - if the trajectory is not aligned, the dominant motion identified will be most likely linked to the rigid body rototranslation of the molecule of interest\n",
@@ -641,7 +641,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In these first two notebook we have mentioned three common dimensionality reduction techniques: PCA, tICA, and t-SNE (for the latter, see [previous notebook](1_DR_part1.ipynb)). Other techniques exist though! For instance, the MurD simulations we used in this notebook have also be examined using a special type of neural network called autoencoder:\n",
+    "In this notebook and the [previous](1_DR_part1.ipynb) one, we have mentioned two common dimensionality reduction techniques: PCA and tICA. Other techniques exist though! For instance, the MurD simulations we used in this notebook have also be examined using a special type of neural network called autoencoder:\n",
     "[V.K. Ramaswamy et al. (2021). Learning protein conformational space with convolutions and latent interpolations, Physical Review X 11](https://journals.aps.org/prx/abstract/10.1103/PhysRevX.11.011052)"
    ]
   },
@@ -685,7 +685,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.6"
   },
   "toc": {
    "base_numbering": 1,
@@ -702,5 +702,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
