--- a/5_Analysis_DR_clustering/3_clustering.ipynb
+++ b/5_Analysis_DR_clustering/3_clustering.ipynb
@@ -99,10 +99,10 @@
    "source": [
     "## 1. Introduction\n",
     "\n",
-    "Clustering is the grouping of data points which are similar to each other. It can be a powerful technique for identifying patterns in data. Clustering analysis does not usually require any training and is known as an *unsupervised learning* technique. The lack of a need for training means it can be applied quickly. Application of clustering are:\n",
+    "Clustering is the grouping of data points which are similar to each other. It can be a powerful technique for identifying patterns in data. Clustering is known as an *unsupervised learning* technique, whereby no example data needs to be provided for this task to be carried out. Application of clustering are:\n",
     "- Looking for trends in data\n",
-    "- Data compression, all data clustering around a point can be reduced to just that point (e.g., reducing colour depth of an image).\n",
-    "- Pattern recognition"
+    "- Data compression, all data clustering around a point can be reduced to just that point (e.g., reducing colour depth of an image)\n",
+    "- Pattern recognition."
    ]
   },
   {
@@ -116,9 +116,9 @@
     }
    },
    "source": [
-    "## 2. K-means Clustering\n",
+    "## 2. K-means clustering\n",
     "\n",
-    "K-means is a simple clustering algorithm that tries to identify the centre of each cluster. It does this by searching for a point which minimises the distance between the centre and all the points in the cluster. The algorithm needs to be told **how many clusters** to look for, but a common technique is to try different numbers of clusters and combine it with other tests to decide on the number."
+    "K-means is an algorithm that aggregates data into clusters by manipulating the position of cluster centres (centroids). Its goal is to search for the ideal position of centrods such that the average distance between each data point and its closest centroid is minimized. The algorithm needs to be told **how many clusters** to define, but a common technique is to try different numbers of clusters and combine it with other tests to decide on the number."
    ]
   },
   {
@@ -196,7 +196,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.2. Plotting and Clustering the data"
+    "### 2.2. Plotting and clustering the data"
    ]
   },
   {
@@ -229,7 +229,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's identify the clusters using K-means. First, we need to initialise the `KMeans` module. As parameters, we tell it how many clusters to look for (`n_clusters=4`), and how many times to repeat the clustering (`n_init=10`, the attempt yielding the smallest average distance of datapoints from the closest centroid will be returned). The latter parameter is especially useful for sparse data, where the performance of `KMeans` is more affected by poor initial conditions. Next, we supply it some data via the `fit` function. Finally, we run the predict function to find the clusters."
+    "Let's identify the clusters using K-means. First, we need to initialise the `KMeans` module. As parameters, we tell it how many clusters to look for (`n_clusters=4`), and how many times to repeat the clustering (`n_init=10`, the attempt yielding the smallest average distance of datapoints from the closest centroid will be returned). The latter parameter is especially useful for sparse data, where the performance of `KMeans` is more affected by poor initial conditions. Next, we define what data needs to be clustered via the `fit` function. Finally, we run the predict function to find the clusters."
    ]
   },
   {
@@ -250,7 +250,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The data can now be plotted to show all the points we randomly generated. To make it clearer which cluster points have been classified to, we can set the colours (the `c` parameter) to use the clusters list that was returned by the predict function. The K-means algorithm also lets us know where the centre of each cluster is located. Cluster centres are stored as a list called `cluster_centers_` inside the `Kmean` object. Let’s go ahead and plot the points from the clusters, colouring them by the output from the K-means algorithm, and also plot the centres of each cluster as a red triangle."
+    "The data can now be plotted to show all the points we randomly generated. To clarify to which cluster each data point has been assigned to, we can define their colour (the `c` parameter) using the <code>clusters</code> list of integers returned by the predict function. Data points belonging to the same cluster will be associated to the same integer number in this list. The K-means algorithm also lets us know where the centre of each cluster is located. Cluster centres are stored as a list called `cluster_centers_` inside the `Kmean` object. Let’s go ahead and plot the points from the clusters, colouring them by the output from the K-means algorithm, and also plotting the centres of each cluster as a red triangle."
    ]
   },
   {
@@ -277,8 +277,8 @@
    },
    "source": [
     "<div class=\"alert alert-info\">\n",
-    "<b>Working in multiple dimensions:</b>\n",
-    "Although this example shows two dimensions the k-means algorithm can work in more than two dimensions, it just becomes very difficult to show this visually once we get beyond 3 dimensions. Its very common in machine learning to be working with multiple variables and so our classifiers are working in multi-dimensional spaces.\n",
+    "<b>Working in multiple dimensions.</b>\n",
+    "Data manipulated in a machine learning context is ofter high-dimensional. Although the example presented her shows the clustering of 2-dimensional data, the k-means algorithm can operate in an arbitrarily high number of dimensions. It is however difficult to show this visually once we get beyond 3 dimensions.\n",
     "</div>\n"
    ]
   },
@@ -325,7 +325,7 @@
    "source": [
     "<div class=\"alert alert-success\">\n",
     "<b>Task 2: K-means with overlapping clusters </b> </div>\n",
-    "    Adjust the program below to increase the standard deviation of the blobs (the cluster_std parameter to make_blobs) and increase the number of samples (n_samples) to 4000. You should start to see the clusters overlapping. Do the clusters that are identified make sense? Is there any strange behaviour from this?\n",
+    "    Adjust the program below to increase the standard deviation of the blobs (the <code>cluster_std</code> parameter to <code>make_blobs</code>) and increase the number of samples (<code>n_samples</code>) to 4000. Visually, you should start to see the blobs start overlapping. Do the clusters that are identified make sense?\n",
     "    \n",
     "```Python\n",
     "data, cluster_id = skl_datasets.make_blobs(n_samples=400, cluster_std=0.75, centers=4, random_state=1)\n",
@@ -347,7 +347,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "### Your solution here! ###\n"
    ]
   },
@@ -389,7 +388,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "### Your solution here! ###\n"
    ]
   },
@@ -398,7 +396,7 @@
    "metadata": {},
    "source": [
     "<details>\n",
-    "<summary> <mark> Solution: Try it yourself</mark> </summary>\n",
+    "<summary> <mark> Solution</mark> </summary>\n",
     "\n",
     "```Python\n",
     "for cluster_count in range(2,11):\n",
@@ -556,7 +554,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "### Your solution here! ###\n"
    ]
   },
@@ -565,7 +562,7 @@
    "metadata": {},
    "source": [
     "<details>\n",
-    "<summary> <mark> Solution: Try it yourself</mark> </summary>\n",
+    "<summary> <mark> Solution</mark> </summary>\n",
     "    \n",
     "```Python\n",
     "epsilon = np.linspace(0.05,0.3,10)\n",
@@ -598,7 +595,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "### Your solution here! ###\n"
    ]
   },
@@ -607,12 +603,9 @@
    "metadata": {},
    "source": [
     "<details>\n",
-    "<summary> <mark> Solution: Try it yourself</mark> </summary>\n",
+    "<summary> <mark> Solution</mark> </summary>\n",
     "\n",
-    "The code for calculating the SpectralClustering is very similar to the kmeans clustering, instead of using the `sklearn.cluster.KMeans` class we use the `sklearn.cluster.SpectralClustering` class.\n",
-    "\n",
-    "The `SpectralClustering` class combines the `fit` and `predict` functions into a single function called `fit_predict`.\n",
-    "This is how the solution for clustering the dataset using Spectral clustering looks like:\n",
+    "The code for calculating the SpectralClustering is very similar to the k-means clustering, instead of using the `sklearn.cluster.KMeans` class we use the `sklearn.cluster.SpectralClustering` class. The `SpectralClustering` class combines the `fit` and `predict` functions into a single function called `fit_predict`. This is how the solution for clustering the dataset using Spectral clustering looks like:\n",
     "\n",
     "```Python\n",
     "import sklearn.cluster as skl_cluster\n",
@@ -638,7 +631,7 @@
     "<div class=\"alert alert-success\">\n",
     "<b>Task 3 (Optional): Performance of clustering algorithms. </b> </div>\n",
     "\n",
-    "Combine the code from the k-means clustering we have shown above for the two circles and your solution to task to using the spectral clustering. Using the `time` module, time how long both clustering algorithms take to run. To get the start time, get something like `start_time = time.time()`. At the end of the clustering snipptet part for each clustering method get `finish_time` in the same way as `start_time`. Subtracting each of the time components you can figure out how long the spectral and k-means clustering takes. Compare how long both parts take to run generating 4,000 samples and testing them for between 2 and 10 clusters. How much did your run times differ? How much do they differ if you increase the number of samples to 8,000? How long do you think it would take to compute 800,000 samples (estimate this, it might take a while to run for real)?"
+    "Combine the code from the k-means clustering we have shown above for the two circles and your solution to the last task to using the spectral clustering. Using the `time` module, time how long both clustering algorithms take to run. To get the start time, get something like `start_time = time.time()`. At the end of the clustering snipptet part for each clustering method get `finish_time` in the same way as `start_time`. Subtracting each of the time components you can figure out how long the spectral and k-means clustering takes. Compare how long both parts take to run generating 4,000 samples and testing them for between 2 and 10 clusters. How much did your run times differ? How much do they differ if you increase the number of samples to 8,000? How long do you think it would take to compute 800,000 samples (estimate this, it might take a while to run for real)?"
    ]
   },
   {
@@ -646,9 +639,9 @@
    "metadata": {},
    "source": [
     "<details>\n",
-    "<summary> <mark> Solution: Try it yourself</mark> </summary>\n",
+    "<summary> <mark> Solution</mark> </summary>\n",
     "\n",
-    "KMeans version, runtime around 4 seconds (your computer might be faster/slower)\n",
+    "Runtime is typically ~4 seconds (depending on the computer used)\n",
     "\n",
     "```Python\n",
     "import matplotlib.pyplot as plt\n",
@@ -673,7 +666,9 @@
     "end_time = time.time()\n",
     "print(\"Elapsed time = \", end_time-start_time, \"seconds\")\n",
     "```\n",
+    "<br>\n",
     "Spectral version, runtime around 9 seconds (your computer might be faster/slower)\n",
+    "<br>\n",
     "    \n",
     "```Python\n",
     "import matplotlib.pyplot as plt\n",
@@ -844,7 +839,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "### Your solution here! ###\n"
    ]
   },
@@ -867,8 +861,8 @@
     "    plt.scatter(cluster_x, cluster_y, s=100, c='r', marker='^')\n",
     "plt.xlabel(r'$\\phi$ in [rad]')\n",
     "plt.ylabel(r'$\\psi$ in [rad]')\n",
-    "``` \n",
-    "\n",
+    "```\n",
+    "<br>\n",
     "It is hard to tell the exact number of clusters, but 2-4 seems like a suitable answer. A problem in this data, is that dihedral angles are periodic.\n",
     "    \n",
     "</details>"
@@ -889,7 +883,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "### Your solution here! ###\n"
    ]
   },
@@ -967,7 +960,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.6"
   },
   "toc": {
    "base_numbering": 1,
@@ -984,5 +977,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
