--- a/5_Analysis_DR_clustering/3_clustering.ipynb
+++ b/5_Analysis_DR_clustering/3_clustering.ipynb
@@ -355,7 +355,7 @@
    "metadata": {},
    "source": [
     "<details>\n",
-    "<summary> <mark> Solution: Try it yourself</mark> </summary>\n",
+    "<summary> <mark> Solution</mark> </summary>\n",
     "\n",
     "```Python\n",
     "data, cluster_id = skl_datasets.make_blobs(n_samples=4000, cluster_std=3.0, centers=4, random_state=1)\n",
